fixed profile image background squash

--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -65,6 +65,7 @@
     background-color: #0c0a11;
     height: 32px;
     border-radius: 60px;
+    min-width: 32px;
     padding: 2px;
     font-weight: bold;
     position: relative;
@@ -233,11 +234,11 @@ cursor: pointer;
 
   #mobile-profile{
     background-color: #0c0a11;
-    min-width: 44px;
+    min-width: 50px;
     padding: 0;
     margin: 0;
-    height: 44px;
-    padding: 2px;
+    height: 50px;
+    max-height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
